--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,3 @@
-.container-app{
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
+#aboutme ,#proyects, #tecnhologie, #contactme{
+    padding-top: 100px;
 }
-
