--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,13 +1,12 @@
 .container-footer {
     display: flex;
-    position: absolute;
     justify-content: space-around;
     align-items: center;
     bottom: 0px;
     height: 164px;
-    width: 99.8%;
+    width: 99.83%;
     background-color: #1C1C1F;
-    border: 2px solid #7C7B84;
+    border-top: 2px solid #7C7B84;
 }
 
 .container-section {
@@ -31,4 +30,11 @@
     display: flex;
     padding: 8px;
     gap: 16px;
+}
+
+.hecho-por{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 6px;
 }
