--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -39,14 +39,14 @@
 
 .container-nav{
     display: flex;
-    gap: 8px;
+    width: 35%;
     padding: 8px;
+    justify-content: space-evenly;
 }
 
 .nav-section{
     padding: 12px;
-    border-radius: 12px;
-    background-color: #D9D9D9;
+    border-radius: 16px;
     display: flex;
     flex-direction: column;
     align-items: center;
