--- a/src/components/SecondButton.css
+++ b/src/components/SecondButton.css
@@ -1,15 +1,16 @@
 .second-button{
+    width: 50%;
     height: 48px;
     background-color: transparent;
-    border: 1px solid #4d4d4d;
+    border: none;
     border-radius: 24px;
     padding: 0px 24px;
-    color: #5c5c61;
+    color: #85858C;
 }
 
 .second-button:hover{
     border: 1px solid #8fa1a9;
     background-color: #1C1C1F;
-    font-weight: bold;
-    color: #6f6f74;
+    font-weight: 600;
+    color: #bdbdc3;
 }
