--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap');
+
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Manrope, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -22,12 +25,40 @@ body {
 
 p{
   margin: 0px;
+  font-size: 24px;
+  color: #8D8C96;
 }
 
 h1,h2,h3,h4,h5,h6{
   margin: 0px;
 }
 
-a:link, a:visited{
+a, a:link, a:visited{
   text-decoration: none;
+  color: #383838;
+  font-size: 22px;
+  font-weight: 600;
+}
+
+
+
+h1{
+  font-size: 70px;
+  font-weight: 900;
+}
+h2{
+  font-size: 55px;
+  font-weight: 800;
+}
+h3{
+  font-size: 40px;
+  font-weight: 600;
+}
+h4{
+  font-size: 32px;
+  font-weight: 400;
+}
+
+button{
+  font-size: 18px;
 }
