--- a/src/components/AboutMe.css
+++ b/src/components/AboutMe.css
@@ -36,7 +36,7 @@
 
 .title-changewords{
     display: flex;
-    gap: 32px;
+    gap: 12px;
 }
 
 .container-buttons-aboutme{
@@ -54,69 +54,7 @@
 }
 /* ------------------------------------ */
 
-/* ------------------------------------ */
-/* container technologies */
-.container-technologies {
-    height: 180px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    gap: 8px;
-}
 
-.container-slider{
-    height: 80px;
-    width: fit-content;
-    overflow: hidden;
-    position: relative;
-    z-index: -5;
-    border-radius: 100px;
-}
-
-.h4{
-    color: #8D8C96;
-}
-
-/* Shadow Technologies */
-.container-slider::after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    width: 40px;
-    height: 100%;
-    background: linear-gradient(to left, rgb(36, 36, 36), rgba(36, 36, 36,0));
-  }
-
-.container-slider::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 40px;
-    height: 100%;
-    background: linear-gradient(to right, rgb(36, 36, 36), rgba(36, 36, 36,0));
-  }
-
-/* End Shadow Technologies */
-/* ------------------------------------ */
-
-/* ------------------------------------ */
-#slider {
-    width: 1400px;
-    height: 80px;
-    background-image: url(/src/assets/Tecnologies.svg);
-    background-size: 100% 100%;
-    animation: slider 40s infinite linear;
-}
-
-@keyframes slider{
-    to{
-        background-position: -1400px;
-    }
-}
-/* End container technologies */
-/* ------------------------------------ */
 
 /* ------------------------------------ */
 /* Container Services Quality */
@@ -151,10 +89,10 @@
 
 .navigate-services{
     width: 50%;
-    height: 48px;
+    height: 50px;
     background-color: transparent;
     border: 1px solid #7C7B84;
-    border-radius: 24px;
+    border-radius: 8px;
     padding: 0px 24px;
     color: #ffffff !important;
     position: relative;
@@ -165,6 +103,6 @@
 }
 
 .navigate-services:hover {
-    background-color: rgba(205, 249, 255, 0.545);
+    background-color: rgb(127 255 212);
     color: #383838 !important;
 }
