create a responsive dessing and refactor components

--- a/src/components/Body.css
+++ b/src/components/Body.css
@@ -12,12 +12,17 @@
 }
 
 .container-body{
-    width: 77%;
+    width: 100%; /* Cambiamos width: 77%; a width: 100%; */
+    min-width: 770px;
     display: flex;
     flex-direction: column;
     gap: 100px;
 }
 /* end container body */
 
-
-
+@media only screen and (min-width: 850px) and (max-width:1150px) {
+    .full-container-body{
+        margin-left: 45px;
+    }
+    
+}
