--- a/src/components/ContactMe.css
+++ b/src/components/ContactMe.css
@@ -2,80 +2,75 @@
 .container-contactme{
     display: flex;
     flex-direction: column;
+    align-items: center;
     margin: 16px;
     padding: 16px;
-    gap: 24px;
+    gap: 70px;
 }
 
-.buttons-of-contactme{
-    display: flex;
-    gap: 48px;
-    padding: 8px;
-    width: 45%;
-}
-
-/* ------------------------------------ */
-/* container technologies */
-.container-technologies {
-    height: 180px;
+.contactme{
+    width: 77%;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
-    gap: 8px;
 }
 
-.container-slider{
-    height: 80px;
-    width: fit-content;
-    overflow: hidden;
+.form-contactme{
+    padding: 8px;
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+}
+
+.name-container{
+    display: flex;
+    flex-direction: column;
+}
+
+.email-container{
+    display: flex;
+    flex-direction: column;
+}
+
+.name-email-container{
+    display: flex;
+    gap: 16px;
+}
+
+.message-container{
+    display: flex;
+    flex-direction: column;
+}
+
+.form-container{
+    width: 77%;
+    display: flex;
+    justify-content: center;
+}
+
+.send-message-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.button-send-message{
+    width: 50%;
+    height: 50px;
+    background-color: transparent;
+    border: 1px solid var(--border-color);
+    border-radius: 8px;
+    padding: 0px 24px;
+    color: var(--parraf-color);
     position: relative;
-    z-index: -5;
-    border-radius: 100px;
+    z-index: 1;
+    cursor: pointer;
 }
 
-.h4{
-    color: #8D8C96;
+
+.button-send-message:hover{
+    background-color: var(--change-word-hover);
+    color: var(--bgHeader-footer);
+    font-weight: bold;
 }
-
-/* Shadow Technologies */
-.container-slider::after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    width: 40px;
-    height: 100%;
-    background: linear-gradient(to left, rgb(36, 36, 36), rgba(36, 36, 36,0));
-  }
-
-.container-slider::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 40px;
-    height: 100%;
-    background: linear-gradient(to right, rgb(36, 36, 36), rgba(36, 36, 36,0));
-  }
-
-/* End Shadow Technologies */
-/* ------------------------------------ */
-
-/* ------------------------------------ */
-#slider {
-    width: 1400px;
-    height: 80px;
-    background-image: url(/src/assets/Tecnologies.svg);
-    background-size: 100% 100%;
-    animation: slider 40s infinite linear;
-}
-
-@keyframes slider{
-    to{
-        background-position: -1400px;
-    }
-}
-/* End container technologies */
-/* ------------------------------------ */
-
 /* end of contact me */
+
