--- a/src/components/AboutMe.css
+++ b/src/components/AboutMe.css
@@ -1,14 +1,15 @@
-
-.container-full-top{
+.container-full-top {
     display: flex;
+    width: 77%;
 }
 
-.container-full-bot{
-    width: 100%;
+.container-full-bot {
+    width: 77%;
     display: flex;
     flex-direction: column;
     gap: 140px;
 }
+
 /* ------------------------------------ */
 
 /* ------------------------------------ */
@@ -34,12 +35,12 @@
     gap: 12px;
 }
 
-.title-changewords{
+.title-changewords {
     display: flex;
     gap: 12px;
 }
 
-.container-buttons-aboutme{
+.container-buttons-aboutme {
     height: 60px;
     width: 40%;
     padding: 8px;
@@ -49,60 +50,109 @@
     justify-content: space-around;
 }
 
-.container-img-aboutme{
+.container-img-aboutme {
     display: flex;
 }
+
 /* ------------------------------------ */
 
 
 
 /* ------------------------------------ */
 /* Container Services Quality */
-.services-quality{
+.services-quality {
     display: flex;
     flex-direction: column;
     gap: 48px;
 }
 
-.services{
+.services {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
+    gap: 40px 100px;
 }
 
 .services img {
-    transition: transform 0.3s ease; /* Ajusta la duración y el tipo de transición según tus necesidades */
-}
-  
-  .services img:hover {
-    transform: translateY(-5px); /* Ajusta la cantidad de desplazamiento hacia arriba según tus necesidades */
-    box-shadow: 0 5px 0 0 rgb(205, 249, 255);
-    border-radius: 20px;
+    transition: transform 0.3s ease;
+    /* Ajusta la duración y el tipo de transición según tus necesidades */
 }
 
-.service{
-    width: 300px;
+.services img:hover {
+    transform: translateY(-5px);
+    /* Ajusta la cantidad de desplazamiento hacia arriba según tus necesidades */
+    box-shadow: 0 5px 0 0 var(--bgIcons-services);
+    border-radius: 16px;
 }
+
+/* .service {
+    width: 300px;
+} */
+
 /*  End Container Services Quality */
 /* ------------------------------------ */
 
+@media only screen and (min-width: 1150px) and (max-width:1800px) {
+    .container-title-abaoutme {
+        width: 77%;
+    }
 
+    .container-full-top {
+        justify-content: space-evenly;
+    }
 
-.navigate-services{
-    width: 50%;
-    height: 50px;
-    background-color: transparent;
-    border: 1px solid #7C7B84;
-    border-radius: 8px;
-    padding: 0px 24px;
-    color: #ffffff !important;
-    position: relative;
-    z-index: 1;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    .container-buttons-aboutme {
+        width: 50%;
+    }
+
+    .services {
+        justify-content: space-around;
+    }
+
+    .service {
+        /* padding: 20px; */
+        text-align: center;
+    }
+
+    .container-body {
+        width: 90%;
+
+    }
+
+    .container-full-bot {
+        width: 77%;
+    }
 }
 
-.navigate-services:hover {
-    background-color: rgb(127 255 212);
-    color: #383838 !important;
+@media only screen and (min-width: 1150px) and (max-width:1550px) {
+    .container-img-aboutme {
+        display: none;
+    }
+
+    .container-full-top {
+        width: 100%;
+        display: flex;
+    }
+
+    .container-buttons-aboutme {
+        width: 45%;
+    }
+}
+
+@media only screen and (min-width: 850px) and (max-width:1150px) {
+    .services {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 40px;
+    }
+
+    .container-img-aboutme {
+        display: none;
+    }
+
+    .container-buttons-aboutme {
+        width: 60%;
+    }
+
 }
