--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -2,46 +2,17 @@
     width: 50%;
     height: 50px;
     background-color: transparent;
-    border: 1px solid #7C7B84;
+    border: 1px solid var(--border-color);
     border-radius: 8px;
     padding: 0px 24px;
-    color: #ffffff;
+    color: var(--white);
     position: relative;
     z-index: 1;
   }
   
   .button:hover {
-    border: 1px solid #8fa1a9;
-    background-color: rgb(127 255 212);
+    color: var(--bgHeader-footer);
+    background-color: var(--change-word-hover);
     font-weight: bold;
   }
   
-  /* .button-container {
-    position: relative;
-    width: 200px;
-    height: 50px;
-  }
-  
-  .button-container:not(:hover) .oculto {
-    opacity: 0;
-    transition-delay: 0s;
-  }
-  
-  .button-container:hover .oculto {
-    opacity: 1;
-    transition-delay: 0.3s;
-  }
-  
-  .oculto {
-    position: absolute;
-    border-radius: 32px;
-    z-index: -1;
-    top: 10px;
-    left: 1px;
-    width: 115px;
-    height: 45px;
-    background-color: red; Cambia el color a tu elección 
-    opacity: 0;
-    transition: opacity 0.3s ease;
-  }
-   */
