--- a/src/components/Experience.css
+++ b/src/components/Experience.css
@@ -1,5 +1,6 @@
 /* container proyect */
-.container-experiences{
+.container-experiences {
+    align-items: center;
     position: relative;
     z-index: 1;
     margin: 16px;
@@ -9,7 +10,12 @@
     gap: 40px;
 }
 
-.experiences{
+.title-experience {
+    width: 77%;
+}
+
+.experiences {
+    width: 77%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -17,50 +23,75 @@
     gap: 24px;
 }
 
-.experience{
-    border: 1px solid gray;
+.experience {
+    border: 1px solid var(--border-color);
     display: flex;
     padding: 24px;
     border-radius: 12px;
 }
 
-.text-experience{
+.text-experience {
     width: 80%;
     display: flex;
     flex-direction: column;
     gap: 24px;
 }
 
-.description-experience{
+.description-experience {
     width: 90%;
-    color: #8D8C96;
+    color: var(--parraf-color);
 }
 
-.img-experience{
+.img-experience {
     display: flex;
     width: 545px;
     height: 300px;
+    /* overflow: hidden; */
 }
 
-.proyects .experience{
-    transition: transform 0.3s ease; /* Ajusta la duración y el tipo de transición según tus necesidades */
+.proyects .experience {
+    transition: transform 0.3s ease;
+    /* Ajusta la duración y el tipo de transición según tus necesidades */
 }
 
 
-.experience{
-    transition: transform 0.3s ease; /* Ajusta la duración y el tipo de transición según tus necesidades */
+.experience {
+    transition: transform 0.3s ease;
+    /* Ajusta la duración y el tipo de transición según tus necesidades */
 }
 
-.experience:hover{
-    transform: translateY(-5px); /* Ajusta la cantidad de desplazamiento hacia arriba según tus necesidades */
-    box-shadow: 0 5px 0 0 rgb(205, 255, 240);
+.experience:hover {
+    transform: translateY(-5px);
+    /* Ajusta la cantidad de desplazamiento hacia arriba según tus necesidades */
+    box-shadow: 0 5px 0 0 var(--hover-experience-proyect);
     border-radius: 12px;
     /* z-index: 0; */
 }
 
-.experience:hover .img-experience{
-    transform: translateY(-5px); /* Ajusta la cantidad de desplazamiento hacia arriba según tus necesidades */
-    box-shadow: 0 5px 0 0 rgb(205, 255, 240);
+.experience:hover .img-experience {
+    transform: translateY(-5px);
+    /* Ajusta la cantidad de desplazamiento hacia arriba según tus necesidades */
+    box-shadow: 0 5px 0 0 var(--hover-experience-proyect);
     border-radius: 20px;
 }
+
+.img-experience img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    object-position: center;
+}
+
 /* End container proyect */
+
+@media only screen and (min-width: 800px) and (max-width:1200px) {
+    .experience {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 24px;
+        gap: 32px;
+        justify-content: center;
+    }
+
+}
