--- a/src/components/Proyect.css
+++ b/src/components/Proyect.css
@@ -6,10 +6,12 @@
     padding: 16px;
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 40px;
 }
 
 .proyects{
+    width: 77%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -18,10 +20,14 @@
 }
 
 .proyect{
-    border: 1px solid gray;
+    border: 1px solid var(--border-color);
     display: flex;
     padding: 24px;
     border-radius: 12px;
+}
+
+.title-proyect{
+    width: 77%;
 }
 
 .text-proyect{
@@ -33,7 +39,7 @@
 
 .description-proyect{
     width: 90%;
-    color: #8D8C96;
+    color: var(--parraf-color);
 }
 
 .tecnhologies{
@@ -49,6 +55,13 @@
     height: 300px;
 }
 
+.img-proyect img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    object-position: center;
+}
+
 .proyects .proyect{
     transition: transform 0.3s ease; /* Ajusta la duración y el tipo de transición según tus necesidades */
 }
@@ -60,14 +73,24 @@
 
 .proyect:hover{
     transform: translateY(-5px); /* Ajusta la cantidad de desplazamiento hacia arriba según tus necesidades */
-    box-shadow: 0 5px 0 0 rgb(205, 255, 240);
+    box-shadow: 0 5px 0 0 var(--hover-experience-proyect);
     border-radius: 12px;
     /* z-index: 0; */
 }
 
 .proyect:hover .img-proyect{
     transform: translateY(-5px); /* Ajusta la cantidad de desplazamiento hacia arriba según tus necesidades */
-    box-shadow: 0 5px 0 0 rgb(205, 255, 240);
+    box-shadow: 0 5px 0 0 var(--hover-experience-proyect);
     border-radius: 20px;
 }
 /* End container proyect */
+
+@media only screen and (min-width: 800px) and (max-width:1200px) {
+    .proyect {
+        flex-direction: column;
+        gap: 32px;
+        align-items: center;
+        justify-content: center;
+    }
+
+}
