--- a/src/components/SecondButton.css
+++ b/src/components/SecondButton.css
@@ -6,12 +6,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    color: #bdbdc3 !important;
+    color: var(--parraf-color) !important;
 }
 
 .second-button:hover{
-    border: 1px solid #8fa1a9;
-    background-color: #1C1C1F;
+    border: 1px solid var(--white);
+    background-color: var(--bgHeader-footer);
     font-weight: 600;
-    color: #ffffff !important;
+    color: var(--white) !important;
 }
