--- a/src/components/TecnhologieProyect.css
+++ b/src/components/TecnhologieProyect.css
@@ -1,9 +1,10 @@
 .tecnho-proyect{
     border-radius: 24px;
-    border: 1px solid #656565;
+    border: 1px solid var(--border-color);
     display: flex;
     align-items: center;
     justify-content: center;
     width: 5rem;
     padding: 4px;
+    color: var(--hover-experience-proyect);
 }
