--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,38 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap');
 
 
-:root {
+:root{
   font-family: Manrope, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+
+  color-scheme: light dark;
+  color: rgba(255, 255, 255, 0.87);
+
+
+  --black: rgb(0, 0, 0);
+  --white: #ffffff;
+  --bgPage: #242424;
+  --parraf-color: #8D8C96;
+  --change-word-hover: #7fffd4;
+  --shadow-box: rgb(205, 255, 240);
+  --text-color: #FFFFFF;
+  --border-color: #7C7B84;
+  --bgHeader-footer: #1C1C1F;
+  --bgIcons-services: rgb(205, 249, 255);
+  --hover-experience-proyect: rgb(205, 255, 240);
+
+}
+
+
+html{
+  scroll-behavior: smooth;
+  background-color: var(--bgPage);
 }
 
 html,
@@ -38,7 +56,6 @@ a, a:link, a:visited{
   font-size: 22px;
   font-weight: 600;
 }
-
 
 
 h1{
@@ -68,6 +85,37 @@ h5{
   font-weight: 500;
 } */
 
+section[id]{
+  scroll-margin-top: 88px;
+}
+
+label{
+  padding: 6px;
+}
+
 button{
   font-size: 18px;
+}
+
+input{
+  background-color: transparent;
+  border: 1px solid #7C7B84;
+  border-radius: 4px;
+  padding: 12px;
+  font-size: 24px;
+  color: #ffffff;
+  outline: none;
+}
+
+input option{
+  background-color: transparent;
+}
+
+textarea{
+  background-color: transparent;
+  outline: none;
+  padding: 12px;
+  font-size: 22px;
+  color: #ffffff;
+  resize: vertical;
 }
