--- a/src/components/Proyect.css
+++ b/src/components/Proyect.css
@@ -1,5 +1,5 @@
 /* container proyect */
-.container-proyects{
+.container-proyects {
     position: relative;
     z-index: 1;
     margin: 16px;
@@ -10,7 +10,7 @@
     gap: 40px;
 }
 
-.proyects{
+.proyects {
     width: 77%;
     display: flex;
     flex-direction: column;
@@ -19,78 +19,106 @@
     gap: 24px;
 }
 
-.proyect{
+.proyect {
     border: 1px solid var(--border-color);
     display: flex;
     padding: 24px;
     border-radius: 12px;
 }
 
-.title-proyect{
+.title-proyect {
     width: 77%;
+    padding: 32px 0 0 0;
 }
 
-.text-proyect{
+.text-proyect {
     width: 80%;
     display: flex;
     flex-direction: column;
     gap: 24px;
 }
 
-.description-proyect{
+.description-proyect {
     width: 90%;
     color: var(--parraf-color);
 }
 
-.tecnhologies{
+.tecnhologies {
     width: 94%;
     display: flex;
     flex-wrap: wrap;
     gap: 12px;
 }
 
-.img-proyect{
+.img-proyect {
     display: flex;
-    width: 545px;
-    height: 300px;
+    align-items: center;
 }
 
-.img-proyect img{
+/* .img-proyect img{
     width: 100%;
     height: 100%;
     object-fit: contain;
     object-position: center;
+} */
+
+.proyects .proyect {
+    transition: transform 0.3s ease;
+    /* Ajusta la duración y el tipo de transición según tus necesidades */
 }
 
-.proyects .proyect{
-    transition: transform 0.3s ease; /* Ajusta la duración y el tipo de transición según tus necesidades */
+
+.proyect {
+    transition: transform 0.3s ease;
+    /* Ajusta la duración y el tipo de transición según tus necesidades */
 }
 
-
-.proyect{
-    transition: transform 0.3s ease; /* Ajusta la duración y el tipo de transición según tus necesidades */
-}
-
-.proyect:hover{
-    transform: translateY(-5px); /* Ajusta la cantidad de desplazamiento hacia arriba según tus necesidades */
+.proyect:hover {
+    transform: translateY(-5px);
+    /* Ajusta la cantidad de desplazamiento hacia arriba según tus necesidades */
     box-shadow: 0 5px 0 0 var(--hover-experience-proyect);
     border-radius: 12px;
     /* z-index: 0; */
 }
 
-.proyect:hover .img-proyect{
-    transform: translateY(-5px); /* Ajusta la cantidad de desplazamiento hacia arriba según tus necesidades */
+.proyect:hover .img-proyect img {
+    transform: translateY(-5px);
+    /* Ajusta la cantidad de desplazamiento hacia arriba según tus necesidades */
     box-shadow: 0 5px 0 0 var(--hover-experience-proyect);
-    border-radius: 20px;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
 }
+
 /* End container proyect */
 
-@media only screen and (min-width: 800px) and (max-width:1200px) {
+@media only screen and (min-width: 900px) and (max-width:1150px) {
     .proyect {
+        width: 80%;
         flex-direction: column;
         gap: 32px;
         align-items: center;
         justify-content: center;
     }
+
+    .title-proyect {
+        text-align: center;
+    }
+
+}
+
+@media only screen and (max-width: 900px) {
+    .proyect {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        padding: 24px;
+        gap: 32px;
+        justify-content: center;
+    }
+
+    .text-proyect {
+        width: 100%;
+    }
+
 
 }
