--- a/src/components/SecondButton.css
+++ b/src/components/SecondButton.css
@@ -2,15 +2,15 @@
     width: 45%;
     height: 50px;
     border-radius: 8px;
-    padding: 0px 24px;
     display: flex;
     align-items: center;
+    text-align: center;
     justify-content: center;
-    color: var(--parraf-color) !important;
+    color: var(--white) !important;
 }
 
 .second-button:hover{
-    border: 1px solid var(--white);
+    border: 1px solid var(--change-word-hover);
     background-color: var(--bgHeader-footer);
     font-weight: 600;
     color: var(--white) !important;
